# Docuchat

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
.postman/: resources.yaml
alembic/: env.py
alembic/versions/: edf2632d52d2_create_users_and_documents_tables.py
chroma_db/: chroma.sqlite3
frontend/: README.md  api_client.py  app.py
frontend/.streamlit/: config.toml
rag/: chunker.py  embedder.py  generator.py  vector_store.py
routers/: auth.py  documents.py
