[project]
name = "project-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
