[project]
name = "project-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.0",
    "google-genai>=2.10.0",
    "numpy>=2.5.1",
    "pdfplumber>=0.11.10",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
]
